syntax = "proto3";

option csharp_namespace = "UserGrpcService";

package user;

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string national_id = 4;
    string birth_date = 5;
}

message UserId {
    string id = 1;
}

message Empty {}

message UserList {
    repeated User users = 1;
}

service UserService {
    rpc CreateUser(User) returns (UserId);
    rpc GetUser(UserId) returns (User);
    rpc UpdateUser(User) returns (Empty);
    rpc DeleteUser(UserId) returns (Empty);
    rpc ListUsers(Empty) returns (UserList);
}
